--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>studio</title>
   </head>
   <body>
@@ -124,3 +125,11 @@
     </footer>
   </body>
 </html>
+
+<section>
+  <ul>
+    <li><h2/li></li>
+    <li>h2</li>
+    <li>h2</li>
+  </ul>
+</section>
