--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    
     <title>studio</title>
+
+    <link rel="stylesheet" href="./css/styles.css" />
+
   </head>
   <body>
-    <header>
-      <a href="./index.html">WebStudio</a>
+    <header class="page-header">
+      <a href="./index.html" class="logo">WebStudio</a>
       <nav>
         <ul>
           <li>
-            <a href="./index.html">Студия</a>
+            <a href="./index.html">Студія</a>
           </li>
           <li>
-            <a href="#">Портфолио</a>
+            <a href="./portfolio.html">Портфоліо</a>
           </li>
           <li>
-            <a href="#">Контакты</a>
+            <a href="#">Контакти</a>
           </li>
         </ul>
       </nav>
@@ -34,45 +37,45 @@
     </header>
     <main>
       <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
       </section>
       <section>
-        <h2>Наши особенности</h2>
+        <h2>Наші особливості</h2>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3>Увага до деталей</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3>Пунктуальність</h3>
             <p>
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              Завдання організації, особливо рамки і місце навчання кадрів у себе.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3>Планування</h3>
             <p>
-              Равным образом консультация с широким активом в значительной степени обуславливает.
+              Рівним чином консультація з широким активом.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3>Сучасні технології</h3>
+            <p>Значимість цих проблем є настільки очевидною, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2>Чим ми займаємось</h2>
         <ul>
           <li>
-            <img src="./images/img1.jpg" alt="решаем алгоритмы" width="370" />
+            <img src="./images/img-team-1.jpg" alt="вірішуємо алгоритми" width="370" />
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="адаптируем приложения" width="370" />
+            <img src="./images/img-team-2.jpg" alt="адаптуємом додатки" width="370" />
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="дизайн приложений" width="370" />
+            <img src="./images/img-team-3.jpg" alt="робимо дизайн додатків" width="370" />
           </li>
         </ul>
       </section>
@@ -80,23 +83,23 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/img-1.jpg" alt="фото дизайнера проекта" width="270" />
-            <h3>Игорь Демьяненко</h3>
+            <img src="./images/img-team-1.jpg" alt="фото дизайнера проєкту" width="270" />
+            <h3>Ігор Дем'яненко</h3>
             <p>product designer</p>
           </li>
           <li>
-            <img src="./images/img-2.jpg" alt="фото разработчика" width="270" />
-            <h3>Ольга Репина</h3>
+            <img src="./images/img-team-2.jpg" alt="фото розробника проєкту" width="270" />
+            <h3>Ольга Репіна</h3>
             <p>frontend developer</p>
           </li>
           <li>
-            <img src="./images/img-3.jpg" alt="фото маркетолога" width="270" />
-            <h3>Николай Тарасов</h3>
+            <img src="./images/img-team-3.jpg" alt="фото маркетолога проєкту" width="270" />
+            <h3>Миколай Тарасов</h3>
             <p>marketing</p>
           </li>
           <li>
-            <img src="./images/img-4.jpg" alt="фото дизайнера интерфейса" width="270" />
-            <h3>Михаил Ермаков</h3>
+            <img src="./images/img-team-4.jpg" alt="фото дизайнера інтерфейсу проєкту" width="270" />
+            <h3>Михайло Єрмаков</h3>
             <p>ui designer</p>
           </li>
         </ul>
@@ -111,7 +114,7 @@
               href="https://goo.gl/maps/ok9CESRuyzMohpuB9"
               target="_blank"
               rel="noreferrer noopener"
-              >г.Киев, пр-т Леси Украинки, 26</a
+              >м.Київ, пр-т Лесі Українки, 26 </a
             >
           </li>
           <li>
@@ -125,11 +128,3 @@
     </footer>
   </body>
 </html>
-
-<section>
-  <ul>
-    <li><h2/li></li>
-    <li>h2</li>
-    <li>h2</li>
-  </ul>
-</section>
