--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,137 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
+
+    <link rel="stylesheet" href="./css/styles.css" />
+
   </head>
   <body>
-    <h1>port</h1>
+    <header>
+      <a href="./index.html">WebStudio</a>
+      <nav>
+        <ul>
+          <li>
+            <a href="./index.html">Студія</a>
+          </li>
+          <li>
+            <a href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li>
+            <a href="#">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <h1>Наші проєкти</h1>
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайти</button></li>
+          <li><button type="button">Додатки</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./images/img-project-1.jpg" alt="">
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img-project-2.jpg" alt="">
+              <h2>Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img-project-3.jpg" alt="">
+              <h2>Ресторан Seafood</h2>
+              <p>Додаток</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img-project-4.jpg" alt="">
+              <h2>Проєкт Prime</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img-project-5.jpg" alt="">
+              <h2>Проєкт Boxes</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img-project-6.jpg" alt="">
+              <h2>Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img-project-7.jpg" alt="">
+              <h2>Видавництво Limited Edition</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img-project-8.jpg" alt="">
+              <h2>Проєкт LAB</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/img-project-9.jpg" alt="">
+              <h2>Growing Business</h2>
+              <p>Додаток</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/ok9CESRuyzMohpuB9"
+              target="_blank"
+              rel="noreferrer noopener"
+              >м.Київ, пр-т Лесі Українки, 26 </a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer> 
   </body>
 </html>
