--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,8 @@
 
     <title>Document</title>
 
+    <link rel="stylesheet" href="">
+
     <link rel="stylesheet" href="./css/styles.css" />
 
   </head>
