--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
+
+<!-- підключаємо основною українську мову -->
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <!-- назва титульної сторінки -->
     <title>studio</title>
-
+    <!-- підлючення css файлу -->
     <link rel="stylesheet" href="./css/styles.css" />
-
   </head>
   <body>
+    <!-- cекція header -->
     <header class="page-header">
       <a href="./index.html" class="logo">WebStudio</a>
       <nav>
@@ -35,13 +37,14 @@
         </li>
       </ul>
     </header>
+    <!-- секція main -->
     <main>
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
       <section>
-        <h2>Наші особливості</h2>
+        <h2 hidden>Наші особливості</h2>
         <ul>
           <li>
             <h3>Увага до деталей</h3>
@@ -49,15 +52,11 @@
           </li>
           <li>
             <h3>Пунктуальність</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів у себе.
-            </p>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів у себе.</p>
           </li>
           <li>
             <h3>Планування</h3>
-            <p>
-              Рівним чином консультація з широким активом.
-            </p>
+            <p>Рівним чином консультація з широким активом.</p>
           </li>
           <li>
             <h3>Сучасні технології</h3>
@@ -65,46 +64,84 @@
           </li>
         </ul>
       </section>
+      <!-- cекція work -->
       <section>
         <h2>Чим ми займаємось</h2>
         <ul>
           <li>
-            <img src="./images/img-team-1.jpg" alt="вірішуємо алгоритми" width="370" />
+            <img
+              src="./images/work/img-work-1.jpg"
+              alt="вірішуємо алгоритми"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="./images/img-team-2.jpg" alt="адаптуємом додатки" width="370" />
+            <img
+              src="./images/work/img-work-2.jpg"
+              alt="адаптуємом додатки"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="./images/img-team-3.jpg" alt="робимо дизайн додатків" width="370" />
+            <img
+              src="./images/work/img-work-3.jpg"
+              alt="робимо дизайн додатків"
+              width="370"
+              height="294"
+            />
           </li>
         </ul>
       </section>
+      <!-- cекція Наша команда  -->
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/img-team-1.jpg" alt="фото дизайнера проєкту" width="270" />
+            <img
+              src="./images/team/img-team-1.jpg"
+              alt="фото дизайнера проєкту"
+              width="270"
+              height="260"
+            />
             <h3>Ігор Дем'яненко</h3>
             <p>product designer</p>
           </li>
           <li>
-            <img src="./images/img-team-2.jpg" alt="фото розробника проєкту" width="270" />
+            <img
+              src="./images/team/img-team-2.jpg"
+              alt="фото розробника проєкту"
+              width="270"
+              height="260"
+            />
             <h3>Ольга Репіна</h3>
             <p>frontend developer</p>
           </li>
           <li>
-            <img src="./images/img-team-3.jpg" alt="фото маркетолога проєкту" width="270" />
+            <img
+              src="./images/team/img-team-3.jpg"
+              alt="фото маркетолога проєкту"
+              width="270"
+              height="260"
+            />
             <h3>Миколай Тарасов</h3>
             <p>marketing</p>
           </li>
           <li>
-            <img src="./images/img-team-4.jpg" alt="фото дизайнера інтерфейсу проєкту" width="270" />
+            <img
+              src="./images/team/img-team-4.jpg"
+              alt="фото дизайнера інтерфейсу проєкту"
+              width="270"
+              height="260"
+            />
             <h3>Михайло Єрмаков</h3>
             <p>ui designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <!-- cекція футер -->
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
@@ -114,8 +151,8 @@
               href="https://goo.gl/maps/ok9CESRuyzMohpuB9"
               target="_blank"
               rel="noreferrer noopener"
-              >м.Київ, пр-т Лесі Українки, 26 </a
-            >
+              >м.Київ, пр-т Лесі Українки, 26
+            </a>
           </li>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
