--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,6 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
-
   </head>
   <body>
     <header>
@@ -48,63 +47,63 @@
         <ul>
           <li>
             <a href="#">
-              <img src="./images/img-project-1.jpg" alt="">
+              <img src="./images/project/img-project-1.jpg" alt="" />
               <h2>Технокряк</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/img-project-2.jpg" alt="">
+              <img src="./images/project/img-project-2.jpg" alt="" />
               <h2>Постер New Orlean vs Golden Star</h2>
               <p>Дизайн</p>
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/img-project-3.jpg" alt="">
+              <img src="./images/project/img-project-3.jpg" alt="" />
               <h2>Ресторан Seafood</h2>
               <p>Додаток</p>
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/img-project-4.jpg" alt="">
+              <img src="./images/project/img-project-4.jpg" alt="" />
               <h2>Проєкт Prime</h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/img-project-5.jpg" alt="">
+              <img src="./images/project/img-project-5.jpg" alt="" />
               <h2>Проєкт Boxes</h2>
               <p>Дизайн</p>
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/img-project-6.jpg" alt="">
+              <img src="./images/project/img-project-6.jpg" alt="" />
               <h2>Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/img-project-7.jpg" alt="">
+              <img src="./images/project/img-project-7.jpg" alt="" />
               <h2>Видавництво Limited Edition</h2>
               <p>Дизайн</p>
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/img-project-8.jpg" alt="">
+              <img src="./images/project/img-project-8.jpg" alt="" />
               <h2>Проєкт LAB</h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <li>
             <a href="#">
-              <img src="./images/img-project-9.jpg" alt="">
+              <img src="./images/project/img-project-9.jpg" alt="" />
               <h2>Growing Business</h2>
               <p>Додаток</p>
             </a>
@@ -121,8 +120,8 @@
               href="https://goo.gl/maps/ok9CESRuyzMohpuB9"
               target="_blank"
               rel="noreferrer noopener"
-              >м.Київ, пр-т Лесі Українки, 26 </a
-            >
+              >м.Київ, пр-т Лесі Українки, 26
+            </a>
           </li>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -132,6 +131,6 @@
           </li>
         </ul>
       </address>
-    </footer> 
+    </footer>
   </body>
 </html>
