--- a/index.html
+++ b/index.html
@@ -8,65 +8,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- назва титульної сторінки -->
     <title>studio</title>
+    <!-- підключення шрифтів -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <!-- підлючення css файлу -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <!-- cекція header -->
     <header class="page-header">
-      <a href="./index.html" class="logo">WebStudio</a>
+      <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
       <nav>
-        <ul>
+        <ul class="site-nav">
           <li>
-            <a href="./index.html">Студія</a>
+            <a href="./index.html" class="link current">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфоліо</a>
+            <a href="./portfolio.html" class="link">Портфоліо</a>
           </li>
           <li>
-            <a href="#">Контакти</a>
+            <a href="#" class="link">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contacts">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
-    <!-- секція main -->
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <!-- cекція hero -->
+      <section class="hero">
+        <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="hero-btn">Замовити послугу</button>
       </section>
-      <section>
-        <h2 hidden>Наші особливості</h2>
+      <!-- секція strange -->
+      <section class="strange">
+        <h2 class="strange-title" hidden>Наші особливості</h2>
         <ul>
           <li>
-            <h3>Увага до деталей</h3>
+            <h3 class="strange-title-text">Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>Пунктуальність</h3>
+            <h3 class="strange-title-text">Пунктуальність</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів у себе.</p>
           </li>
           <li>
-            <h3>Планування</h3>
+            <h3 class="strange-title-text">Планування</h3>
             <p>Рівним чином консультація з широким активом.</p>
           </li>
           <li>
-            <h3>Сучасні технології</h3>
+            <h3 class="strange-title-text">Сучасні технології</h3>
             <p>Значимість цих проблем є настільки очевидною, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
       <!-- cекція work -->
-      <section>
-        <h2>Чим ми займаємось</h2>
+      <section class="work">
+        <h2 class="work-title">Чим ми займаємось</h2>
         <ul>
           <li>
             <img
@@ -95,8 +101,8 @@
         </ul>
       </section>
       <!-- cекція Наша команда  -->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
         <ul>
           <li>
             <img
@@ -105,8 +111,8 @@
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p>product designer</p>
+            <h3 class="team-title-text">Ігор Дем'яненко</h3>
+            <p class="team-text">product designer</p>
           </li>
           <li>
             <img
@@ -115,8 +121,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репіна</h3>
-            <p>frontend developer</p>
+            <h3 class="team-title-text">Ольга Репіна</h3>
+            <p class="team-text">frontend developer</p>
           </li>
           <li>
             <img
@@ -125,8 +131,8 @@
               width="270"
               height="260"
             />
-            <h3>Миколай Тарасов</h3>
-            <p>marketing</p>
+            <h3 class="team-title-text">Миколай Тарасов</h3>
+            <p class="team-text">marketing</p>
           </li>
           <li>
             <img
@@ -135,30 +141,31 @@
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p>ui designer</p>
+            <h3 class="team-title-text">Михайло Єрмаков</h3>
+            <p class="team-text">ui designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- cекція футер -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
+    <footer class="footer">
+      <a href="./index.html" class="logo-web-footer"><span class="logo-web">Web</span>Studio</a>
+      <address class="addres">
         <ul>
           <li>
             <a
               href="https://goo.gl/maps/ok9CESRuyzMohpuB9"
+              class="addres-map"
               target="_blank"
               rel="noreferrer noopener"
               >м.Київ, пр-т Лесі Українки, 26
             </a>
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
