--- a/portfolio.html
+++ b/portfolio.html
@@ -5,131 +5,134 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Document</title>
-
-    <link rel="stylesheet" href="">
-
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html">WebStudio</a>
+    <header class="page-header">
+      <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
       <nav>
-        <ul>
+        <ul class="site-nav">
           <li>
-            <a href="./index.html">Студія</a>
+            <a href="./index.html" class="link">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфоліо</a>
+            <a href="./portfolio.html" class="link current">Портфоліо</a>
           </li>
           <li>
-            <a href="#">Контакти</a>
+            <a href="#" class="link">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contacts">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Наші проєкти</h1>
+      <section class="projects">
+        <h1 hidden>Наші проєкти</h1>
         <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button class="projects-btn" type="button">Все</button></li>
+          <li><button class="projects-btn" type="button">Веб-сайти</button></li>
+          <li><button class="projects-btn" type="button">Додатки</button></li>
+          <li><button class="projects-btn" type="button">Дизайн</button></li>
+          <li><button class="projects-btn" type="button">Маркетинг</button></li>
         </ul>
         <ul>
           <li>
             <a href="#">
               <img src="./images/project/img-project-1.jpg" alt="" />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="projects-title link">Технокряк</h2>
+              <p class="projects-title-text link">Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/project/img-project-2.jpg" alt="" />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+              <p class="projects-title-text">Дизайн</p>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/project/img-project-3.jpg" alt="" />
-              <h2>Ресторан Seafood</h2>
-              <p>Додаток</p>
+              <h2 class="projects-title">Ресторан Seafood</h2>
+              <p class="projects-title-text">Додаток</p>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/project/img-project-4.jpg" alt="" />
-              <h2>Проєкт Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="projects-title">Проєкт Prime</h2>
+              <p class="projects-title-text">Маркетинг</p>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/project/img-project-5.jpg" alt="" />
-              <h2>Проєкт Boxes</h2>
-              <p>Дизайн</p>
+              <h2 class="projects-title">Проєкт Boxes</h2>
+              <p class="projects-title-text">Дизайн</p>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/project/img-project-6.jpg" alt="" />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="projects-title">Inspiration has no Borders</h2>
+              <p class="projects-title-text">Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/project/img-project-7.jpg" alt="" />
-              <h2>Видавництво Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="projects-title">Видавництво Limited Edition</h2>
+              <p class="projects-title-text">Дизайн</p>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/project/img-project-8.jpg" alt="" />
-              <h2>Проєкт LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="projects-title">Проєкт LAB</h2>
+              <p class="projects-title-text">Маркетинг</p>
             </a>
           </li>
           <li>
             <a href="#">
               <img src="./images/project/img-project-9.jpg" alt="" />
-              <h2>Growing Business</h2>
-              <p>Додаток</p>
+              <h2 class="projects-title">Growing Business</h2>
+              <p class="projects-title-text">Додаток</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
+    <footer class="footer">
+      <a href="./index.html" class="logo-web-footer"><span class="logo-web">Web</span>Studio</a>
+      <address class="addres">
         <ul>
           <li>
             <a
               href="https://goo.gl/maps/ok9CESRuyzMohpuB9"
+              class="addres-map"
               target="_blank"
               rel="noreferrer noopener"
               >м.Київ, пр-т Лесі Українки, 26
             </a>
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
