+text-decoration:none
1)не розумію чому не спрацьовує текст декорейшн на сторінці портфоліо
2) в футері по замовченню італік - хоча інший текст нормал наслідує з боді - тому в футері прописав стайл нормалю
Підкажіть будь-ласка що не так роблю?

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
             <a href="#">
               <img src="./images/project/img-project-1.jpg" alt="" />
               <h2 class="projects-title link">Технокряк</h2>
-              <p class="projects-title-text link">Веб-сайт</p>
+              <p class="projects-title-text">Веб-сайт</p>
             </a>
           </li>
           <li>
