--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
       <!-- секція strange -->
       <section class="strange">
-        <h2 class="strange-title" hidden>Наші особливості</h2>
+        <h2 class="visually-hidden">Наші особливості</h2>
         <ul>
           <li>
             <h3 class="strange-title-text">Увага до деталей</h3>
@@ -112,7 +112,7 @@
               height="260"
             />
             <h3 class="team-title-text">Ігор Дем'яненко</h3>
-            <p class="team-text">product designer</p>
+            <p class="team-text">Product designer</p>
           </li>
           <li>
             <img
@@ -122,7 +122,7 @@
               height="260"
             />
             <h3 class="team-title-text">Ольга Репіна</h3>
-            <p class="team-text">frontend developer</p>
+            <p class="team-text">Frontend developer</p>
           </li>
           <li>
             <img
@@ -132,7 +132,7 @@
               height="260"
             />
             <h3 class="team-title-text">Миколай Тарасов</h3>
-            <p class="team-text">marketing</p>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img
@@ -142,7 +142,7 @@
               height="260"
             />
             <h3 class="team-title-text">Михайло Єрмаков</h3>
-            <p class="team-text">ui designer</p>
+            <p class="team-text">UI designer</p>
           </li>
         </ul>
       </section>
