--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     </header>
     <main>
       <section class="projects">
-        <h1 hidden>Наші проєкти</h1>
+        <h1 class="visually-hidden">Наші проєкти</h1>
         <ul>
           <li><button class="projects-btn" type="button">Все</button></li>
           <li><button class="projects-btn" type="button">Веб-сайти</button></li>
