--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               height="260"
             />
             <h3 class="team-title-text">Ігор Дем'яненко</h3>
-            <p class="team-text">Product designer</p>
+            <p class="team-text" lang="en">Product designer</p>
           </li>
           <li>
             <img
@@ -122,7 +122,7 @@
               height="260"
             />
             <h3 class="team-title-text">Ольга Репіна</h3>
-            <p class="team-text">Frontend developer</p>
+            <p class="team-text" lang="en">Frontend developer</p>
           </li>
           <li>
             <img
@@ -132,7 +132,7 @@
               height="260"
             />
             <h3 class="team-title-text">Миколай Тарасов</h3>
-            <p class="team-text">Marketing</p>
+            <p class="team-text" lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -142,7 +142,7 @@
               height="260"
             />
             <h3 class="team-title-text">Михайло Єрмаков</h3>
-            <p class="team-text">UI designer</p>
+            <p class="team-text" lang="en">UI designer</p>
           </li>
         </ul>
       </section>
