--- a/portfolio.html
+++ b/portfolio.html
@@ -50,65 +50,65 @@
         </ul>
         <ul>
           <li>
-            <a href="#">
+            <a href="#" class="project-cards">
               <img src="./images/project/img-project-1.jpg" alt="" />
               <h2 class="projects-title link">Технокряк</h2>
               <p class="projects-title-text">Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="project-cards">
               <img src="./images/project/img-project-2.jpg" alt="" />
-              <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+              <h2 class="projects-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
               <p class="projects-title-text">Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="project-cards">
               <img src="./images/project/img-project-3.jpg" alt="" />
-              <h2 class="projects-title">Ресторан Seafood</h2>
+              <h2 class="projects-title">Ресторан <span lang="en">Seafood</span></h2>
               <p class="projects-title-text">Додаток</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="project-cards">
               <img src="./images/project/img-project-4.jpg" alt="" />
-              <h2 class="projects-title">Проєкт Prime</h2>
+              <h2 class="projects-title">Проєкт <span lang="en">Prime</span></h2>
               <p class="projects-title-text">Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="project-cards">
               <img src="./images/project/img-project-5.jpg" alt="" />
-              <h2 class="projects-title">Проєкт Boxes</h2>
+              <h2 class="projects-title">Проєкт <span lang="en">Boxes</span></h2>
               <p class="projects-title-text">Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="project-cards">
               <img src="./images/project/img-project-6.jpg" alt="" />
-              <h2 class="projects-title">Inspiration has no Borders</h2>
+              <h2 class="projects-title" lang="en">Inspiration has no Borders</h2>
               <p class="projects-title-text">Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="project-cards">
               <img src="./images/project/img-project-7.jpg" alt="" />
-              <h2 class="projects-title">Видавництво Limited Edition</h2>
+              <h2 class="projects-title">Видавництво <span lang="en">Limited Edition</span></h2>
               <p class="projects-title-text">Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="project-cards">
               <img src="./images/project/img-project-8.jpg" alt="" />
-              <h2 class="projects-title">Проєкт LAB</h2>
+              <h2 class="projects-title">Проєкт <span lang="en">LAB</span></h2>
               <p class="projects-title-text">Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="project-cards">
               <img src="./images/project/img-project-9.jpg" alt="" />
-              <h2 class="projects-title">Growing Business</h2>
+              <h2 class="projects-title" lang="en">Growing Business</h2>
               <p class="projects-title-text">Додаток</p>
             </a>
           </li>
